force-app/main/default/objects/CalloutRequest__c/CalloutRequest__c.object-meta.xml
<CustomObject>
    <description>CXM log request - response</description>
    <label>CalloutRequest</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CalloutRequest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CalloutRequest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>