force-app/main/default/objects/CalloutRequest__c/fields/AsyncRequest__c.field-meta.xml
<CustomField>
    <fullName>AsyncRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AsyncRequest</label>
    <referenceTo>AsyncRequest__c</referenceTo>
    <relationshipLabel>CalloutRequest</relationshipLabel>
    <relationshipName>CalloutRequest</relationshipName>
    <type>Lookup</type>
</CustomField>