force-app/main/default/objects/CalloutRequest__c/fields/CalloutHandlerName__c.field-meta.xml
<CustomField>
    <fullName>CalloutHandlerName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CalloutHandler Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>