force-app/main/default/objects/CalloutRequest__c/fields/RequestId__c.field-meta.xml
<CustomField>
    <fullName>RequestId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RequestId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>