force-app/main/default/objects/CalloutRequest__c/fields/Response_Code__c.field-meta.xml
<CustomField>
    <fullName>Response_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Response_Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>