force-app/main/default/objects/CalloutRequest__c/fields/Response_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Response_DateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Response_DateTime</label>
    <type>DateTime</type>
</CustomField>