force-app/main/default/objects/CalloutRequest__c/fields/Response_Description__c.field-meta.xml
<CustomField>
    <fullName>Response_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Response_Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>