force-app/main/default/objects/CalloutRequest__c/fields/Sent__c.field-meta.xml
<CustomField>
    <fullName>Sent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sent</label>
    <type>DateTime</type>
</CustomField>