force-app/main/default/objects/CalloutRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RequestId__c</columns>
    <columns>Submit_DateTime__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Response_Code__c</columns>
    <columns>Response_DateTime__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Submit_DateTime__c</field>
        <operation>greaterOrEqual</operation>
        <value>3/6/2023 12:01 AM</value>
    </filters>
    <filters>
        <field>Submit_DateTime__c</field>
        <operation>lessThan</operation>
        <value>3/7/2023 12:01 AM</value>
    </filters>
    <label>All</label>
</ListView>