force-app/main/default/objects/CalloutRequest__c/listViews/Today_Log.listView-meta.xml
<ListView>
    <fullName>Today_Log</fullName>
    <columns>NAME</columns>
    <columns>CalloutHandlerName__c</columns>
    <columns>Duration__c</columns>
    <columns>RequestId__c</columns>
    <columns>Submit_DateTime__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>51077,59423</value>
    </filters>
    <label>Today Log</label>
</ListView>