force-app/main/default/objects/CalloutRequest__c/listViews/Yesterday_Log.listView-meta.xml
<ListView>
    <fullName>Yesterday_Log</fullName>
    <columns>NAME</columns>
    <columns>RequestId__c</columns>
    <columns>Submit_DateTime__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Yesterday Log</label>
    <language>en_US</language>
</ListView>